--- a/css/style.css
+++ b/css/style.css
@@ -150,3 +150,37 @@ nav a.loading {
     font-size: 12px;
     margin-top: 2px;
 }
+
+h3 {
+    font-weight: bold;
+    font-size: 1.5em;
+}
+h4 {
+    font-weight: bold;
+    margin: 1em 0;
+}
+dl {
+    display: inline-block;
+    width: 33%;
+}
+dt {
+    color: #999999;
+    font-size: 0.8em;
+}
+dt span {
+    color: #333333;
+    font-size: 1.2em;
+}
+dt a {
+    text-decoration: underline;
+}
+dd {
+    font-size: 0.8em;
+    color: #999999;
+    margin-left: 1em;
+    margin-bottom: 1em;
+}
+.report-section {
+    border-bottom: 1px solid #999999;
+    margin-bottom: 2em;
+}
