Lots of improvements to startup reports; filter support; upgrade highcharts to 2.1

--- a/css/style.css
+++ b/css/style.css
@@ -185,3 +185,10 @@ dd {
     border-bottom: 1px solid #999999;
     margin-bottom: 2em;
 }
+.filters {
+    margin-bottom: 2em;
+    text-align: right;
+}
+.filters label {
+    margin-right: 1em;
+}
